Make durable message streams portable across service mode
